h4_vision/check_errors_v18.txt
   Compiling h4_vision v0.1.0 (D:\PROJECTS\h4_GameHack\h4_vision)
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error[E0507]: cannot move out of `procs_manual`, a captured variable in an `FnMut` closure
     --> h4_vision\src\main.rs:290:26
      |
  283 |     let procs_manual = all_processes.clone();
      |         ------------   --------------------- move occurs because `procs_manual` has type `Arc<std::sync::Mutex<Vec<ProcessEntry>>>`, which does not implement the `Copy` trait
      |         |
      |         captured outer variable
  284 |     ui.on_start_manual_search(move |val: SharedString, size: SharedString, _crit: SharedString, _type: SharedString| {
      |                               -------------------------------------------------------------------------------------- captured by this `FnMut` closure
...
  290 |             tokio::spawn(async move {
      |                          ^^^^^^^^^^ `procs_manual` is moved here
...
  307 |                 let p_list = procs_manual.clone();
      |                              ------------ variable moved due to use in coroutine
      |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but `FnOnce` closures may consume them only once
     --> D:\PROJECTS\h4_GameHack\target\debug\build\h4_vision-7f83baeb48d0cbb4\out\main.rs:37094:85
      |
37094 | ...elf , mut f : impl FnMut (sp :: SharedString , sp :: SharedString , sp :: SharedString , sp :: SharedString) -> () + 'static) {
      |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider cloning the value before moving it into the closure
      |
  290 ~             let value = procs_manual.clone();
  291 ~             tokio::spawn(async move {
  292 |                 let status = f.lock().unwrap().get_next();
  ...
  307 |                 let ui_final = ui_inner.clone();
  308 ~                 let p_list = value.clone();
      |

warning: unused variable: `ui_refresh`
   --> h4_vision\src\main.rs:207:9
    |
207 |     let ui_refresh = ui_handle.clone();
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_ui_refresh`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `procs_smart`
   --> h4_vision\src\main.rs:341:9
    |
341 |     let procs_smart = all_processes.clone();
    |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_procs_smart`

warning: unused variable: `model_load`
   --> h4_vision\src\main.rs:381:9
    |
381 |     let model_load = results_model.clone();
    |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_model_load`

For more information about this error, try `rustc --explain E0507`.
warning: `h4_vision` (bin "h4_vision") generated 3 warnings
warning: h4_vision@0.1.0: warning: Component is neither used nor exported
warning: h4_vision@0.1.0:    --> D:\PROJECTS\h4_GameHack\h4_vision\ui\main.slint:122:1
warning: h4_vision@0.1.0:     |
warning: h4_vision@0.1.0: 122 | component H4ButtonNeon inherits H4ButtonBase { drop-shadow-blur: 5px; drop-shadow-color: H4Themes.active_accent; }
warning: h4_vision@0.1.0:     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: could not compile `h4_vision` (bin "h4_vision") due to 1 previous error; 3 warnings emitted
